# jobcopilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_app.py
app/: config.py  main.py
app/ai/: __init__.py
app/core/: analyzer.py  cover_letter.py  docx_parser.py  pdf_parser.py
app/models/: schemas.py
app/storage/: __init__.py  database.py
data/uploads/: .gitkeep
prompts/: analyze.txt  cover_letter.txt
