[project]
name = "jobcopilot"
version = "0.1.0"
description = "AI 求职副驾驶 - 帮你优化简历、生成求职信"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.30.0",
    "openai>=1.10.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
